--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,8 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "test": "phpunit"
     },
     "conflict": {
         "symfony/symfony": "*"
@@ -73,5 +74,13 @@
             "allow-contrib": false,
             "require": "7.3.*"
         }
+    },
+    "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^4.1",
+        "liuggio/fastest": "^1.13",
+        "phpunit/phpunit": "^12.2",
+        "symfony/browser-kit": "7.3.*",
+        "symfony/css-selector": "7.3.*",
+        "zenstruck/foundry": "^2.6"
     }
 }
